samples/_failures_safe/1761493035_77682f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0202e606.c: In function ‘main’:
./samples/SAFE/__tmp_0202e606.c:148:16: error: missing terminating " character
  148 |         printf("Error reading
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0202e606.c:148:9: error: expected expression at end of input
  148 |         printf("Error reading
      |         ^~~~~~
./samples/SAFE/__tmp_0202e606.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0202e606.c:148:9: error: expected declaration or statement at end of input
